Version ClaSS-1.0.56 release (2013/11/5)
-------------------------------------------

Exposed the note field for fees_applied.

Added a general note field to a student's fees page using Background
type=fee.

Tiny fix to the student_reports scripts in InfoBook.



Version ClaSS-1.0.55 release (2013/10/23)
-------------------------------------------

The tinyMCE spellchecker was broken. Removed and use the native
broswer spellchecker instead.

Work in progress moving the category statements into new db tables for
the new skills log functionality.

A one-off migrate_statements() function needs to be run for
backward-compatibility.

The category_editor script now allows individual skill statements to be
assigned ratings.

Tiny fix the js for Chrome compatibility problem intrlduced with the
meals module.

Fix to a typo in the db_sync_users script.

Corrected the Irish language name.

Added the option to edit meal definitions. New print format for meals
organised by form.

Fix to displaying the rating label for a skill statment.

Increased the max number of skill statements to 50.

Small change to the meals print format for absent students.

Tiny change to section permissions so that pastoral perms are
honoured. Solves a problem of how do we allow access to previous
students who have no section.


Version ClaSS-1.0.54 release (2013/09/30)
-------------------------------------------

Added language packs for Russian, Chinese, Rumanian and Irish Gaelic.

Updated the Spanish translation.

Added a new meals module under Admin.

Tiny fix to the new_assessment import scores function so that the
colstart is sensible to humans.

Tiny fix to the ents list to display year group.

Further work on the meals module.

Add new meal option available.

Fix to the photo upload js for slow uploads.


Version ClaSS-1.0.53 release (2013/09/28)
-------------------------------------------

Fix to the list_files function for report context.
